handson/manifest/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-by-gke-csm
  annotations:
    kubernetes.io/ingress.class: "gce"
    # networking.gke.io/managed-certificates: "csm-handson-cert"
spec:
  ingressClassName: gce
  rules:
  - host: csm.handson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: handson
            port:
              number: 8080
